Thu Dec 18 20:15:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * introduce the upsdrv_info_t structure: this is a structure containing all the
   common driver information, like name, version, author(s) and development
   status (patch provided by Arnaud Quette).
   - main.ch: declare the upsdrv_info_t structure and a generic upsdrv_banner
     function to print the banner information.
   - drivers/*: create and fill the upsdrv_info_t entry and remove the
     upsdrv_banner function. Bump the release version. Remove header files that
     only contain the driver version (this information is now available through
     upsdrv_info_t upsdrv_info that is filled in every driver)
   - docs/new-drivers.txt: add and update the according information.

Thu Dec 18 12:13:22 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - clients/Makefile.am: apply nut-openssl_linkage_fix.diff (from Oden Eriksson)

Tue Dec 16 21:55:24 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - configure.in, m4/nut_check_os.m4: declare and use the NUT_CHECK_OS m4 macro
   to determine the exact system name

Mon Dec 15 13:14:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - docs/upsd.users.sample, docs/upsmon.conf.sample: make the base configuration
   examples more coherent accross the various files, and more easy to use for
   the predominant use case (simple configuration)
    
Mon Dec 15 10:07:55 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - Add tcp-wrappers support to the upsd server. This will restore the
   functionality of allowfrom that was lost when the ACL mechanism was
   removed with r1233. It is now again possible to grant users access by
   source IP for commands that require to be logged into the server.

Thu Dec 11 04:12:54 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - Apply other portion of Steffen Plotner's patch to fetch ambient temperature
   for APC SNMP module (APCC_OID_IEM_TEMP value). Should also fix Alioth bug
   #310613.
